--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
         <p class="view"><a href="/">welcome</a></p>
         <p class="view"><a href="/aboutme.html">about me</a></p>
-        <!--<p class="view"><a href="/projects.html">projects</a></p>-->
+        <!--<p class="view"><a href="/research.html">research</a></p>-->
         <p class="view"><a href="/publications.html">publications</a></p>
 
         {% if site.show_downloads %}
