added stuff that lived without committing for too long

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p class="view"><a href="/">welcome</a></p>
-        <p class="view"><a href="/aboutme.html">about me</a></p>
-        <!--<p class="view"><a href="/research.html">research</a></p>-->
-        <p class="view"><a href="/publications.html">publications</a></p>
+        <p class="view"><a href="/aboutme">about me</a></p>
+        <p class="view"><a href="/research">research</a></p>
+        <p class="view"><a href="/publications">publications</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
